// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

package com.example.replicated.map;

option java_outer_classname = "SomeMapApi";

message IncreaseFooValue {
  string map_id = 1 [(kalix.field).id = true];
  int32 value = 2;
}

message DecreaseFooValue {
  string map_id = 1 [(kalix.field).id = true];
  int32 value = 2;
}

message SetBarValue {
  string map_id = 1 [(kalix.field).id = true];
  string value = 2;
}

message AddBazValue {
  string map_id = 1 [(kalix.field).id = true];
  string value = 2;
}

message RemoveBazValue {
  string map_id = 1 [(kalix.field).id = true];
  string value = 2;
}

message GetValues {
  string map_id = 1 [(kalix.field).id = true];
}

message CurrentValues {
  int32 foo = 1;
  string bar = 2;
  repeated string baz = 3;
}

service MapService {
  option (kalix.codegen) = {
    replicated_entity: {
      name: ".domain.SomeMap"
      type_id: "some-map"
      replicated_map: {
        key: ".domain.SomeKey"
      }
    }
  };

  rpc IncreaseFoo(IncreaseFooValue) returns (google.protobuf.Empty);
  rpc DecreaseFoo(DecreaseFooValue) returns (google.protobuf.Empty);
  rpc SetBar(SetBarValue) returns (google.protobuf.Empty);
  rpc AddBaz(AddBazValue) returns (google.protobuf.Empty);
  rpc RemoveBaz(RemoveBazValue) returns (google.protobuf.Empty);
  rpc Get(GetValues) returns (CurrentValues);
}

service ScalarMapService {
  option (kalix.codegen) = {
    replicated_entity: {
      name: ".domain.SomeScalarMap"
      type_id: "some-scalar-map"
      replicated_map: {
        key: "string"
      }
    }
  };

  rpc IncreaseFoo(IncreaseFooValue) returns (google.protobuf.Empty);
  rpc DecreaseFoo(DecreaseFooValue) returns (google.protobuf.Empty);
  rpc SetBar(SetBarValue) returns (google.protobuf.Empty);
  rpc AddBaz(AddBazValue) returns (google.protobuf.Empty);
  rpc RemoveBaz(RemoveBazValue) returns (google.protobuf.Empty);
  rpc Get(GetValues) returns (CurrentValues);
}
